# python-takehome-challenge-starter

./: .gitignore  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: Dockerfile  Makefile  PROBLEM_DESCRIPTION.md  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py  main.py
{{ cookiecutter.project_slug }}/tests/: test_main.py
{{ cookiecutter.project_slug }}/tests/{{ cookiecutter.project_slug }}/: test_main.py
