[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
authors = ["Tristan Garwood <tristan.garwood@gmail.com>"]
license = "MIT"
packages = [
    { include = "{{ cookiecutter.project_slug }}", from = "src" },
]
readme = 'README.md'

[tool.poetry.scripts]
start = "{{ cookiecutter.project_slug }}.main:main"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
testfixtures = "^8.3.0"
ruff = "^0.6.8"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false